--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,19 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+//custom my page start
+$sans-serif: 'Nanum Gothic';
+$monospace: 'Ubuntu';
+//custom my page end
+
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+// test
+
+// .page__content{
+//     font-size: 0.8rem;
+// }
